force-app/main/default/objects/MUSW__Payable_Receipt__c/MUSW__Payable_Receipt__c.object-meta.xml
<CustomObject>
    <label>Payable Receipt</label>
    <nameField>
        <displayFormat>PYR-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payable Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>