force-app/main/default/objects/MUSW__Payable_Receipt__c/fields/BGBK__Cart__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cart used to make the payment using Deposit</description>
    <label>Cart</label>
    <referenceTo>BGBK__Cart__c</referenceTo>
    <relationshipLabel>Payable Receipts</relationshipLabel>
    <relationshipName>Payable_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>