force-app/main/default/objects/MUSW__Payable_Receipt__c/fields/MUSW__Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Amount__c</fullName>
    <description>The amount of the transaction related to a deposit: deposit collection (positive value), transferred in (positive value), transferred out (negative value).</description>
    <label>Amount Collected</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>