force-app/main/default/objects/MUSW__Payable_Receipt__c/fields/MUSW__Deposit__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deposit</label>
    <referenceTo>MUSW__Deposit__c</referenceTo>
    <relationshipLabel>Payable Receipts</relationshipLabel>
    <relationshipName>Payable_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>