force-app/main/default/objects/MUSW__Payable_Receipt__c/fields/MUSW__Receipt__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Receipt__c</fullName>
    <description>Lookup to the receipt record.</description>
    <label>Receipt</label>
    <referenceTo>MUSW__Receipt__c</referenceTo>
    <relationshipLabel>Payables</relationshipLabel>
    <relationshipName>Payable_Receipts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>