force-app/main/default/objects/MUSW__Payable_Receipt__c/fields/MUSW__Source_Payable_Receipt__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Source_Payable_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System populated when an amount is transferred in from another deposit.</description>
    <label>Source Payable Receipt</label>
    <referenceTo>MUSW__Payable_Receipt__c</referenceTo>
    <relationshipLabel>Payable Receipts</relationshipLabel>
    <relationshipName>Payable_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>